--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Resources Page for MIS 611D and MIS 464 | Artificial Intelligence Laboratory</title>
+  <title>Resources Page for MIS 464 and MIS 611D | Artificial Intelligence Laboratory</title>
 </head>
 <body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-13526 node-type-page section-class-resources-page" >
 
+  <div class="field field-name-field-image field-type-image field-label-hidden">
+    <img typeof="foaf:Image" src="/courses/darpa_big_data-cr.jpg" width="1058" height="386" alt="" />  
+	</div>
 
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h2>Class Resources for <a href="/courses/mis464">MIS 464</a>, Data Analytics, and <a href="/courses/mis611d">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h2>
