--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 
 <!DOCTYPE html>
+<html lang="en" class="external-links ua-brand-icons">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>AI Lab Class Resources</title>
 
-<head>
-  <title>Resources Page for MIS 464 and MIS 611D | Artificial Intelligence Laboratory</title>
-</head>
-<body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-13526 node-type-page section-class-resources-page" >
+    <!-- Latest icon font stylesheet -->
+    <link rel="stylesheet" href="https://cdn.uadigital.arizona.edu/lib/ua-brand-icons/latest/ua-brand-icons.css">
+    <!-- Compiled and minified UA Bootstrap CSS, icon font not included -->
+    <link rel="stylesheet" href="https://cdn.uadigital.arizona.edu/lib/ua-bootstrap/v1.0.0-beta.18/ua-bootstrap.min.css">
+  </head>
 
+<style>
+a:link,a:visited {
+  color: #005580;
+  text-decoration: underline;
+  font-weight: 1;
+}
+
+</style>
+<body style="margin:20px; padding:0">
+        <div id="content" class="column" role="main">
+        <a id="main-content"></a>   	
+                          <h2 class="title" id="page-title"><font face="MiloWeb">Resources Page for MIS 464 and MIS 611D</font></h2>                                                       
+<div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
-    <img typeof="foaf:Image" src="/courses/darpa_big_data-cr.jpg" width="1058" height="386" alt="" />  
-	</div>
+    <img typeof="foaf:Image" src="/courses/darpa_big_data-cr.jpg" width="1058" height="386" alt="" />  </div>
+</div>
 
+
+<font face="MiloWeb-Text">
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h2>Class Resources for <a href="/courses/mis464">MIS 464</a>, Data Analytics, and <a href="/courses/mis611d">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h2>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
