--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ a:link,a:visited {
 <li><a href="/courses/resources/deep_learning_lecun_et_al_2015.pdf" target="_blank">Deep Learning</a> (Nature, LeCun et al., 2015)</li>
 <li><a href="/courses/resources/chen_deep_learning_april_2015.pptx">Deep Learning: An Overview</a> (Weifeng Li, Victor Benjamin, Xiao Liu, and Hsinchun Chen, 2016)</li>
 <li><a href="/courses/MIS611D/chen_lda_april_2016.pptx">Topic Modeling and Latent Dirichlet Allocation: An Overview</a> (Weifeng Li, Sagar Samtani, and Hsinchun Chen, 2016)</li>
-<li><a href="/courses/resources/shuo_cnn.pptx" target="_blank">An Introduction to Convolutional Neural Networks</a> (Shuo Yu and Hsinchun Chen, 2018)</li>
-<li><a href="/courses/resources/hongyi_recurrent_neural_networks.pptx" target="_blank">An Introduction to Recurrent Neural Networks</a> (Hongyi Zhu and Hsinchun Chen, 2018)</li>
-<li><a href="/courses/resources/sagar_autoencoder_overview_sagar.pptx" target="_blank">Autoencoders: Overviews and Selected Application</a> (Sagar Samtani and Hsinchun Chen, 2018)</li>
+<li><a href="/courses/resources/shuo_cnn.pptx">An Introduction to Convolutional Neural Networks</a> (Shuo Yu and Hsinchun Chen, 2018)</li>
+<li><a href="/courses/resources/hongyi_recurrent_neural_networks.pptx">An Introduction to Recurrent Neural Networks</a> (Hongyi Zhu and Hsinchun Chen, 2018)</li>
+<li><a href="/courses/resources/sagar_autoencoder_overview_sagar.pptx">Autoencoders: Overviews and Selected Application</a> (Sagar Samtani and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/reza_deeptransferlearning.pptx" target="_blank">An Introduction to Deep Transfer Learning</a> (Mohammadreza Ebrahimi and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/wf_topic_modeling.pptx" target="_blank">An Overview of Topic Modeling</a> (Weifeng Li and Hsinchun Chen, 2018)</li>
 <li><a href="/courses/resources/chai_wf_deep_generative_models.pptx" target="_blank">Deep Generative Models: An Overview</a> (Yidong Chai, Weifeng Li, and Hsinchun Chen, 2018)</li>
