--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AI Lab Class Resources</title>
+    <title>MIS 464, Data Analytics</title>
 
     <!-- Latest icon font stylesheet -->
     <link rel="stylesheet" href="https://cdn.uadigital.arizona.edu/lib/ua-brand-icons/latest/ua-brand-icons.css">
@@ -23,29 +23,12 @@ a:link,a:visited {
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
         <a id="main-content"></a>   	
-                          <h2 class="title" id="page-title"><font face="MiloWeb">Resources Page for MIS 464 and MIS 611D</font></h2>                                                       
+                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464, Data Analytics</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
-    <img typeof="foaf:Image" src="/courses/darpa_big_data-cr.jpg" width="1058" height="386" alt="" />  </div>
-</div>
-
-
-<font face="MiloWeb-Text">
-
-    <div id="main">
-  
-      <div id="content" class="column" role="main">
-        <a id="main-content"></a>
-                          <h1 class="title" id="page-title">MIS 464, Data Analytics</h1>
-                                                        
-<div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">
-
-      
-  
-  <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/MIS464/wordle496a.png" width="1058" height="386" alt="" />  </div>
-
 </div>
+
 
 
 <article class="node-19643 node node-page view-mode-full clearfix" about="/MIS464" typeof="foaf:Document">
