--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@ a:link,a:visited {
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
 </ul><hr />
-<img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="https://ai.arizona.edu/mis464">Return to Class Page for MIS 464, Data Analytics</a>
-<img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="https://ai.arizona.edu/mis611d">Return to Class page for MIS 611D, Topics in Data and Web Mining</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/mis464">Return to Class Page for MIS 464, Data Analytics</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/mis611d">Return to Class page for MIS 611D, Topics in Data and Web Mining</a>
 <span style="font-size: small;">Photo provided through courtesy of DARPA and available through <a href="https://commons.wikimedia.org/wiki/File:DARPA_Big_Data.jpg">Wikimedia Commons</a>.</span></p>
 </div></div></div>
   
