--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:link,a:visited {
 
 <font face="MiloWeb-Text">
 
-  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for <a href="/courses/mis464">MIS 464</a>, Data Analytics, and <a href="/courses/mis611d">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h3>
+  <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for <a href="/courses/MIS464">MIS 464</a>, Data Analytics, and <a href="/courses/MIS611D">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h3>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <h3>TOPIC 1: Introduction</h3>
 <ol><li><a href="/courses/chen_mis_review_2019.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
@@ -236,8 +236,8 @@ a:link,a:visited {
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
 </ul><hr />
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/mis464">Return to Class Page for MIS 464, Data Analytics</a>
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/mis611d">Return to Class page for MIS 611D, Topics in Data and Web Mining</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Return to Class Page for MIS 464, Data Analytics</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Return to Class page for MIS 611D, Topics in Data and Web Mining</a>
 <span style="font-size: small;">Photo provided through courtesy of DARPA and available through <a href="https://commons.wikimedia.org/wiki/File:DARPA_Big_Data.jpg">Wikimedia Commons</a>.</span></p>
 </div></div></div>
   
