--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:link,a:visited {
 <ol><li><a href="/courses/chen_mis_review_2019.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
 <li><a href="/courses/resources/01-acm_student_mebership_form.pdf" target="_blank" style="color: #0077b3;">ACM Student Membership Application and Order Form [PDF]</a>, [<a href="https://services.acm.org/public/qj/quickjoin/qj_control.cfm?promo=PWEBTOP&amp;form_type=Student" target="_blank">Online Link</a>]</li>
 <li><a href="https://www.ieee.org/membership/join/index.html" target="_blank">IEEE Student Membership Application</a></li>
-<li><a href="http://dl.acm.org/citation.cfm?doid=1877725.1877727" target="_blank">Ideas for the Future of the IS Field</a>, by G. B. Davis, P. Gray, S. Madnick, J. F. Nunamaker, R. Sprague, and A. Whinston.  <em>Transactions on Management Information Systems</em>, Volume 1, Issue 1, pp. 2:1 - 2:15.<a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank"> [</a><a href="/courses/resources/davis-ideas.pdf">PDF copy here</a><a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank">]</a></li>
+<li><a href="http://dl.acm.org/citation.cfm?doid=1877725.1877727" target="_blank">Ideas for the Future of the IS Field</a>, by G. B. Davis, P. Gray, S. Madnick, J. F. Nunamaker, R. Sprague, and A. Whinston.  <em>Transactions on Management Information Systems</em>, Volume 1, Issue 1, pp. 2:1 - 2:15. [<a href="/courses/resources/davis-ideas.pdf" target="_blank">PDF copy here]</a></li>
 <li><a href="/courses/MIS611D/design-science-hchen.pdf" target="_blank">Design Science, Grand Challenges, and Societal Impacts</a>, by Hsinchun Chen<a href="http://dl.acm.org/citation.cfm?id=1929917" target="_blank">.</a> <em>Transactions on Management Information Systems</em>, Volume 2, Issue 1, pp. 1:1 - 1:10. </li>
 <li><a href="/courses/MIS611D/chen_publications_2019.pdf" target="_blank">Journals, Conferences, and Funding Sources for MIS Researchers and Educators: A Resource Guide</a>, by Dr. Hsinchun Chen (846K, 2003)</li>
 <li><a href="/courses/MIS611D/2017_journal_citation_report.pdf" target="_blank">ISI Ranking of Top Computer Science and Information Systems Journals, from the ISI Web of Knowledge 2017 edition</a><a href="/courses/MIS510/chen-guide-mis-2003.pdf">, </a>updated in December 2018</li>
@@ -254,8 +254,6 @@ a:link,a:visited {
     <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="https://www.eller.arizona.edu/"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
 </div></div></div>  </div>
 
-  
-  
 </div>
 
 </div>
@@ -277,22 +275,9 @@ a:link,a:visited {
 </div>
 </div></div></div>  </div>
 
-  
-  
 </div>
 
 </div>
-<div id="block-nodeblock-11496" class="block block-nodeblock footer-red-button-block last odd">
-
-      
-  <div id="node-11496" class="node node-block view-mode-full clearfix" about="/block/current-research-button-footer" typeof="sioc:Item foaf:Document">
-
-        <span property="dc:title" content="Current Research Button for Footer" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
-  
-  <div class="content">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="https://ai.arizona.edu/research" class="button large-red">Current Research</a></p>
-</div></div></div>  </div>
-
   
   
 </div>
