--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -23,7 +23,7 @@ a:link,a:visited {
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
         <a id="main-content"></a>   	
-                          <h3 class="title" id="page-title"><font face="MiloWeb">MIS 464, Data Analytics</font></h3>                                                       
+                          <h2 class="title" id="page-title"><font face="MiloWeb">MIS 464, Data Analytics</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
     <img typeof="foaf:Image" src="/courses/MIS464/wordle496a.png" width="1058" height="386" alt="" />  </div>
@@ -40,8 +40,8 @@ a:link,a:visited {
   
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf">Printable Syllabus copy and Course Outline</a></li>
-<li><a href="/courses/class-resources-page">Class Resources Page</a></li>
+<ul><li><a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
+<li><a href="/courses/class-resources-page.htm">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
 <li><a href="#objectives">Course Objectives</a></li>
@@ -55,10 +55,13 @@ a:link,a:visited {
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
 <p>See page 4 of the <a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
-<p>The <a href="/courses/class-resources-page">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
+<p>The <a href="/courses/class-resources-page.htm">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2019</h3>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />Office/Phone: MCCL 430X, (520) 621-4153 <br />Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />Class Web site: <a href="https://ai.arizona.edu/mis464">http://ai.arizona.edu/mis464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
+<p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
+Office/Phone: MCCL 430X, (520) 621-4153 <br />
+Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
+Class Web site: <a href="/courses/MIS464">/courses/MIS464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at:<em>  </em><a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Artificial Intelligence: A Modern Approach, </em>by Russel &amp; Norvig, 3rd Edition, 2000, Prentice Hall<em><br /></em></li>
