--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -35,8 +35,8 @@ a:link,a:visited {
 <font face="MiloWeb-Text"> 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="https://courseware.ai.arizona.edu/sites/ai/files/MIS611D/mis611d-syllabus-spring-2016.pdf">Printable Syllabus copy and Course Outline</a><a href="#outline"></a></li>
-<li><a href="https://courseware.ai.arizona.edu/class-resources-page.htm">Class Resources Page</a></li>
+<ul><li><a href="/courses/MIS611D/mis611d-syllabus-spring-2016.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
+<li><a href="/courses/class-resources-page.htm">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
 <li><a href="#objectives">Course Objectives</a></li>
@@ -48,12 +48,14 @@ a:link,a:visited {
 <li><a href="#sessions">Lab Sessions and Guest Speakers</a></li>
 </ul></div>
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
-<p>See page 5 of the <a href="https://courseware.ai.arizona.edu/sites/ai/files/MIS611D/mis611d-syllabus-spring-2016.pdf">printable copy of the Syllabus</a> for the day by day course outline.</p>
+<p>See page 5 of the <a href="/courses/MIS611D/mis611d-syllabus-spring-2016.pdf" target="_blank">printable copy of the Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
-<p>The <a href="https://courseware.ai.arizona.edu/class-resources-page.htm">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
+<p>The <a href="/courses/class-resources-page.htm">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION</h3>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
-<p>Time/Classroom: M/W 11:00AM-12:15PM, MCCL 430E <br /> Instructor’s Office Hours: M/W 10:00-11:00AM or by appointment <br /> Office/Phone: MCCL 430X, (520) 621-4153 <br /> Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br /> Class Web site: <a href="https://ai.arizona.edu/mis611d">https://ai.eller.arizona.edu/hchen/mis611d</a> <a href="https://ai.arizona.edu/mis611d"></a> (VERY IMPORTANT!) <br /> Teaching Assistants (TAs): <br />  - Weifeng Li, <a href="mailto:weifengli@email.arizona.edu">weifengli@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br />  - Sagar Samtani, <a href="mailto:sagars@email.arizona.edu">sagars@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br /> TA Office Hours: TA hours will be announced via email</p>
+<p>Time/Classroom: M/W 11:00AM-12:15PM, MCCL 430E <br /> Instructor’s Office Hours: M/W 10:00-11:00AM or by appointment <br /> Office/Phone: MCCL 430X, (520) 621-4153 <br /> 
+Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br /> 
+Class Web site: <a href="/courses/MIS611d">/courses/MIS611d</a> (VERY IMPORTANT!) <br /> Teaching Assistants (TAs): <br />  - Weifeng Li, <a href="mailto:weifengli@email.arizona.edu">weifengli@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br />  - Sagar Samtani, <a href="mailto:sagars@email.arizona.edu">sagars@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br /> TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining with Weka</em>, Ian H. Witten and Eibe Frank (also with a 5-week MOOC course). <a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Visual Insights: A Practical Guide to Making Sense of Data</em>, MIT Press, Katy Börner &amp; David E. Polley, 2014 (also with a 7-week MOOC course). <a href="http://info.ils.indiana.edu/~katy/S637/">http://info.ils.indiana.edu/~katy/S637/</a></li>
@@ -122,6 +124,50 @@ a:link,a:visited {
 <h3><a name="sessions" id="sessions"></a>LAB SESSIONS and GUEST SPEAKERS</h3>
 <p>Selected lab sessions will be provided during the semester on the following topics: Web services, cloud computing platforms, Hadoop, Weka, etc. Selected guest speakers will present in the class</p>
 </div></div></div>
+<hr>
+<div id="footer-wrapper">
+    <footer id="footer" class="region region-footer">
+    <div id="block-nodeblock-97" class="block block-nodeblock footer-logo-block first odd">
+
+      
+  <div id="node-97" class="node node-block view-mode-full clearfix" about="/block/footer-logo" typeof="sioc:Item foaf:Document">
+
+        <span property="dc:title" content="Footer Logo" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
   
+  <div class="content">
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="https://www.eller.arizona.edu/"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
+</div></div></div>  </div>
+
+</div>
+
+</div>
+<div id="block-nodeblock-98" class="block block-nodeblock footer-contact-info-block even">
+
+      
+  <div id="node-98" class="node node-block view-mode-full clearfix" about="/block/contact-information-block" typeof="sioc:Item foaf:Document">
+
+        <span property="dc:title" content="Contact Information Block" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
+  
+  <div class="content">
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="container-inline-block column-2">
+<div>1130 E. Helen St. <br /> McClelland Hall 430 <br /> P.O. Box 210108 <br /> Tucson, Arizona 85721-0108 <br /> 520.621.6219</div>
+<div class="last">
+<ul style="margin-top: 8px;"><li><a href="https://www.linkedin.com/showcase/ellermis/" target="_blank" class="linkedin">Linkedin</a></li>
+<li><a href="https://www.facebook.com/EllerMIS" target="_blank" class="facebook">Facebook</a></li>
+<li><a href="https://twitter.com/ellercollege" target="_blank" class="twitter">Twitter</a></li>
+</ul></div>
+</div>
+</div></div></div>  </div>
+
+</div>
+
+</div>
+  
+  
+</div>
+
+</div>
+  </footer>
+</div>    
 </body>
 </html>
