--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -35,7 +35,7 @@ a:link,a:visited {
 <font face="MiloWeb-Text"> 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS611D/mis611d-syllabus-spring-2016.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
+<ul><li><a href="/courses/MIS611D/mis_611d_syllabus_spring_2019.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
 <li><a href="/courses/class-resources-page.htm">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
@@ -48,14 +48,14 @@ a:link,a:visited {
 <li><a href="#sessions">Lab Sessions and Guest Speakers</a></li>
 </ul></div>
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
-<p>See page 5 of the <a href="/courses/MIS611D/mis611d-syllabus-spring-2016.pdf" target="_blank">printable copy of the Syllabus</a> for the day by day course outline.</p>
+<p>See page 5 of the <a href="/courses/MIS611D/mis_611d_syllabus_spring_2019.pdf" target="_blank">printable copy of the Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/class-resources-page.htm">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION</h3>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: M/W 11:00AM-12:15PM, MCCL 430E <br /> Instructor’s Office Hours: M/W 10:00-11:00AM or by appointment <br /> Office/Phone: MCCL 430X, (520) 621-4153 <br /> 
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br /> 
-Class Web site: <a href="/courses/MIS611d">/courses/MIS611d</a> (VERY IMPORTANT!) <br /> Teaching Assistants (TAs): <br />  - Weifeng Li, <a href="mailto:weifengli@email.arizona.edu">weifengli@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br />  - Sagar Samtani, <a href="mailto:sagars@email.arizona.edu">sagars@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br /> TA Office Hours: TA hours will be announced via email</p>
+Class Web site: <a href="/courses/MIS611D">/courses/MIS611d</a> (VERY IMPORTANT!) <br /> Teaching Assistants (TAs): <br />  - Weifeng Li, <a href="mailto:weifengli@email.arizona.edu">weifengli@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br />  - Sagar Samtani, <a href="mailto:sagars@email.arizona.edu">sagars@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430) <br /> TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining with Weka</em>, Ian H. Witten and Eibe Frank (also with a 5-week MOOC course). <a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
 <li><em>Visual Insights: A Practical Guide to Making Sense of Data</em>, MIT Press, Katy Börner &amp; David E. Polley, 2014 (also with a 7-week MOOC course). <a href="http://info.ils.indiana.edu/~katy/S637/">http://info.ils.indiana.edu/~katy/S637/</a></li>
