--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -41,7 +41,7 @@ a:link,a:visited {
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
 <ul><li><a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
-<li><a href="/courses/class-resources-page.htm">Class Resources Page</a></li>
+<li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
 <li><a href="#objectives">Course Objectives</a></li>
@@ -55,7 +55,7 @@ a:link,a:visited {
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
 <p>See page 4 of the <a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
-<p>The <a href="/courses/class-resources-page.htm">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
+<p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2019</h3>
 <p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
