--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -124,7 +124,8 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 <p>Selected lab sessions will be provided during the semester on the following topics: web services, cloud computing platforms, Tableau, Weka, etc. Selected guest speakers will present in the class.</p>
 </div></div></div>
 <hr>  
-  
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
+<hr> 
 </article><!-- /.node -->
               </div><!-- /#content -->
   
