--- a/index.html
+++ b/index.html
@@ -236,8 +236,9 @@ a:link,a:visited {
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
 </ul><hr />
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Return to Class Page for MIS 464, Data Analytics</a>
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Return to Class page for MIS 611D, Topics in Data and Web Mining</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Class Page for MIS 464, Data Analytics</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
 <p><span style="font-size: small;">Photo provided through courtesy of DARPA and available through <a href="https://commons.wikimedia.org/wiki/File:DARPA_Big_Data.jpg">Wikimedia Commons</a>.</span></p>
 </div></div></div>
 <hr>
