--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -122,6 +122,8 @@ Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu
 <p>Selected lab sessions will be provided during the semester on the following topics: Web services, cloud computing platforms, Hadoop, Weka, etc. Selected guest speakers will present in the class.</p>
 </div></div></div>
   
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
+<hr>
   
 </article><!-- /.node -->
               </div><!-- /#content -->
