--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ a:link,a:visited {
 </style>
 <body style="margin:20px; padding:0">
         <div id="content" class="column" role="main">
-        <a id="main-content"></a>   	
+        <a id="main-content"></a> 
+<img src="/courses/Eller_Webheader.png"><h1><font face="MiloWeb">Artificial Intelligence Laboratory</font></h2>
+<hr>	
                           <h2 class="title" id="page-title"><font face="MiloWeb">Resources Page for MIS 464 and MIS 611D</font></h2>                                                       
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
